# python_packaging

./: LICENSE  README.md  github_action.md  githun_action.md  pyproject.toml  requirements_dev.txt  template.py  tox.ini
.github/workflows/: python_packaging.yml
experiments/: experiments.ipynb
src/arithmatic_package/: __main__.py  arithmatic.py  numpy_arithmatic.py
src/arithmatic_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/unit/: test_arithmatic.py  test_arithmatic_numpy.py
