[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arithmatic_package"
version = "0.0.1"
description = "A sample python packaging and automating testing project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = ["numpy"]
optional-dependencies = {
    dev = [
        "pytest>=6.0",
        "black",
        "flake8"
    ]
}

