[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arithmatic_package"
version = "0.0.1"
description = "A sample python packaging and automating testing project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]
license = { file = "LICENSE" }
optional-dependencies = {dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy"
    ]}
urls = {project = "https://github.com/Indiwara65/python_packaging.git"}